--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -19,6 +19,7 @@ dependencies:
   espressif/knob: "^1.0.0"
   lvgl/lvgl: "~9.2.2"
   esp_lvgl_port: "~2.4.4"
+  teriyakigod/esp_lcd_st7735: "^0.0.1"
   espressif/esp_io_expander_tca95xx_16bit: "^2.0.0"
   tny-robotics/sh1106-esp-idf:
     version: "^1.0.0"
